--- a/public/news.html
+++ b/public/news.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="description" content='aaa'>
-    <meta itemprop="image" content="img/logoS.png">
+    <!-- <meta itemprop="image" content="img/logoS.png"> -->
     <title>奇点资讯</title>
     <script src="js/jquery.min.js"></script>
     <link rel="stylesheet" href="css/ex.css"/>
