--- a/public/news.html
+++ b/public/news.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
     <meta name="description" content='aaa'>
     <!-- <meta itemprop="image" content="img/logoS.png"> -->
     <title>奇点资讯</title>
