--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="读奇点，阅天下">
+    <meta name="description" content="深度整合资讯，高效连接信息和用户，国内最大的细分领域内容提供商"/>
     <title>奇点资讯</title>
     <link rel="stylesheet" href="css/indexQidian.css"/>
     <script src="js/jquery.min.js"></script>
