--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"> -->
+    <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="description" content="深度整合资讯，高效连接信息和用户，国内最大的细分领域内容提供商"/>
     <title>奇点资讯</title>
     <link rel="stylesheet" href="css/indexQidian.css"/>
@@ -44,60 +44,7 @@
             }
         })
 
-        // var imgUrl = "图片地址";
-        // var lineLink = "网址";
-        var descContent = '读奇点，阅天下';
-        var shareTitle = '奇点资讯';
-        var appid = '';
-        
-        function shareFriend() {
-            WeixinJSBridge.invoke('sendAppMessage',{
-                "appid": appid,
-                // "img_url": imgUrl,
-                "img_width": "200",
-                "img_height": "200",
-                // "link": lineLink,
-                "desc": descContent,
-                "title": shareTitle
-            }, function(res) {
-                //_report('send_msg', res.err_msg);
-            })
-        }
-        function shareTimeline() {
-            WeixinJSBridge.invoke('shareTimeline',{
-                // "img_url": imgUrl,
-                "img_width": "200",
-                "img_height": "200",
-                // "link": lineLink,
-                "desc": descContent,
-                "title": shareTitle
-            }, function(res) {
-                   //_report('timeline', res.err_msg);
-            });
-        }
-        function shareWeibo() {
-            WeixinJSBridge.invoke('shareWeibo',{
-                "content": descContent,
-                // "url": lineLink,
-            }, function(res) {
-                //_report('weibo', res.err_msg);
-            });
-        }
-        // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
-        document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
-            // 发送给好友
-            WeixinJSBridge.on('menu:share:appmessage', function(argv){
-                shareFriend();
-            });
-            // 分享到朋友圈
-            WeixinJSBridge.on('menu:share:timeline', function(argv){
-                shareTimeline();
-            });
-            // 分享到微博
-            WeixinJSBridge.on('menu:share:weibo', function(argv){
-                shareWeibo();
-            });
-        }, false);
+       
     })
 </script>
 <style>
@@ -386,6 +333,7 @@
         <img src="img/searchQidian.png">
     </div></a>
 </div>
+的实打实的
 <ul class="navBox">
     <div class="jiantou"><img src="img/qiDianjiantou.png"></div>
     <li class="border channel" id="1"><a>热点</a></li>
