--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -333,7 +333,6 @@
         <img src="img/searchQidian.png">
     </div></a>
 </div>
-的实打实的
 <ul class="navBox">
     <div class="jiantou"><img src="img/qiDianjiantou.png"></div>
     <li class="border channel" id="1"><a>热点</a></li>
@@ -367,14 +366,14 @@
     <div id="scroller1">
         <div id = "scroller-pullDown" style="position: fixed;top: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
+            <!-- <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span> -->
         </div>
         <div class="refresh">
             <img src="img/load.gif">
-            <span>正在刷新更多数据...</span>
+            <!-- <span>正在刷新更多数据...</span> -->
         </div>
         <ul class="mainBox">
-            <span class="load">正在加载...</span>
+            <!-- <span class="load">正在加载...</span> -->
             <!--<a href=""><li>-->
             <!--<div class="imgbox">-->
             <!--<img src="">-->
@@ -435,7 +434,7 @@
             <!--</div>-->
             <!--</li></a>-->
         </ul>
-        <div class="loadMord">正在加载更多新闻...</div>
+        <!-- <div class="loadMord">正在加载更多新闻...</div> -->
         <div id = "scroller-pullUp" style="position: absolute;bottom: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
             <!-- <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span> -->
