--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="深度整合资讯，高效连接信息和用户，国内最大的细分领域内容提供商"/>
+    <meta name="description" content="读奇点 阅天下"/>
     <title>奇点资讯</title>
     <link rel="stylesheet" href="css/indexQidian.css"/>
     <script src="js/jquery.min.js"></script>
@@ -366,14 +366,14 @@
     <div id="scroller1">
         <div id = "scroller-pullDown" style="position: fixed;top: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <!-- <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span> -->
+            <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
         </div>
         <div class="refresh">
             <img src="img/load.gif">
-            <!-- <span>正在刷新更多数据...</span> -->
+            <span>正在刷新更多数据...</span>
         </div>
         <ul class="mainBox">
-            <!-- <span class="load">正在加载...</span> -->
+            <span class="load">正在加载...</span>
             <!--<a href=""><li>-->
             <!--<div class="imgbox">-->
             <!--<img src="">-->
@@ -437,7 +437,7 @@
         <!-- <div class="loadMord">正在加载更多新闻...</div> -->
         <div id = "scroller-pullUp" style="position: absolute;bottom: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <!-- <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span> -->
+            <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span>
         </div>
     </div>
 </div>
