--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -9,7 +9,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/indexQidian.js"></script>
     <script src="js/note.js"></script>
-    <script src="js/iscroll-probe.js"></script>
+    <!-- <script src="js/iscroll-probe.js"></script>-->
 </head>
 <script>
     $(function(){
