--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -10,6 +10,7 @@
     <script src="js/indexQidian.js"></script>
     <script src="js/note.js"></script>
      <script src="js/iscroll-probe.js"></script>
+    <script src="js/weixin.js"></script>
 </head>
 <script>
     $(function(){
