--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -44,7 +44,20 @@
                 $(".navBox").css("height","50px");
             }
         })
-console.log(wx);
+        wx.onMenuShareAppMessage({
+            title: '奇点资讯', // 分享标题
+            desc: '读奇点，阅天下', // 分享描述
+            link: '', // 分享链接
+            imgUrl: '', // 分享图标
+            type: '', // 分享类型,music、video或link，不填默认为link
+            dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+            success: function () {
+                // 用户确认分享后执行的回调函数
+            },
+            cancel: function () {
+                // 用户取消分享后执行的回调函数
+            }
+        });
        
     })
 </script>
