--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -340,6 +340,7 @@
     })
 </script>
 <body>
+<div style="display: none"><img src="img/350.png"></div>
 <div class="top">
     <div class="title">
         <img src="img/titleQidian.png">
@@ -449,7 +450,7 @@
             <!--</div>-->
             <!--</li></a>-->
         </ul>
-        <!-- <div class="loadMord">正在加载更多新闻...</div> -->
+         <div class="loadMord">正在加载更多新闻...</div>
         <div id = "scroller-pullUp" style="position: absolute;bottom: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
             <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span>
