--- a/public/search.html
+++ b/public/search.html
@@ -116,7 +116,7 @@
 <div class="phoneTest">
     <!-- <img src="img/phoneRotate.png" id="phoneChange"> -->
 </div>
-<div class="phoneWait">正在努力搜索...</div>
+<div class="phoneWait">实时搜索中，请耐心等待...</div>
 <div class="wait">搜索中，请稍后...</div>
 <div class="wait1">请稍后重试</div>
 <div class="mainOutbox"></div>
