--- a/public/news.html
+++ b/public/news.html
@@ -211,10 +211,11 @@ $("body").on("touchmove", function(e) {
          -->
     </div>
 </div>
+<div class="loadMord">正在加载更多观点...</div>
 <!-- 相关观点 end -->
         <div id = "scroller-pullUp1">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <span id = "pullUp-msg" class = "pull-up-msg">上拉加载更多</span>
+            <!-- <span id = "pullUp-msg" class = "pull-up-msg">上拉加载更多</span> -->
         </div>
     </div>
 </div>
