--- a/public/localNews.html
+++ b/public/localNews.html
@@ -299,7 +299,7 @@
             <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
         </div>
         <ul id="thelist"></ul>
-        <div id = "scroller-pullUp" style="position: fixed;bottom: -43px;left: 0;width: 100%">
+        <div id = "scroller-pullUp" style="position: absolute;bottom: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
             <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%">上拉加载更多</span>
         </div>
