--- a/public/news.html
+++ b/public/news.html
@@ -219,7 +219,7 @@ $("body").on("touchmove", function(e) {
         </div>
     </div>
 </div>
-<div class="footer">
+<!-- <div class="footer">
     <div class="footertu">
         <img src="img/logoS.png">
     </div>
@@ -232,7 +232,7 @@ $("body").on("touchmove", function(e) {
             下载App
             </div>
         </a>
-</div>
+</div> -->
 <div class="zhezhao">
     <div class="zhezhaodownload">
         <!--<span>请下载我们的应用立即体验</span>-->
