--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -377,6 +377,10 @@
     <li class="channel" id="12"><a >旅游</a></li>
     <li class="channel" id="19"><a >美文</a></li>
     <li class="channel" id="15"><a >美食</a></li>
+    <li class="channel" id="29"><a >外媒</a></li>
+    <li class="channel" id="30"><a >影视</a></li>
+    <li class="channel" id="31"><a >奇闻</a></li>
+    <li class="channel" id="32"><a >萌宠</a></li>
 </ul>
 <div id="wrapper1">
     <div id="scroller1">
