奇点资讯跳转

--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -334,7 +334,7 @@
         }, false);
 //        dates();
         dates2();
-        $(".border").trigger("click");
+        // $(".border").trigger("click");
 
 
     })
