--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -381,6 +381,7 @@
     <li class="channel" id="30"><a >影视</a></li>
     <li class="channel" id="31"><a >奇闻</a></li>
     <li class="channel" id="32"><a >萌宠</a></li>
+    <li class="channel" id="35"><a >App</a></li>
 </ul>
 <div id="wrapper1">
     <div id="scroller1">
